# json-to-terminal

./: .gitignore  Cargo.toml
src/: app.rs  app.rs.old  error.rs  history.rs  input.rs  interface.rs  lib.rs  main.rs  session.rs  terminal.rs
src/interfaces/: chat.rs  curated_listing.rs  list.rs
src/models/: session.rs
src/utilities/: mod.rs
