[package]
name = "tooey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pandoculation = { git = "https://github.com/davidRoussov/pandoculation.git" }
crossterm = "0.26.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
simple-logging = "2.0.2"
atty = "0.2"
clap = "3.0.0-beta.5"
uuid = {version = "1.7.0", features = ["v4"]}
linked-hash-map = "0.5.6"
ratatui = "0.26.0"
color-eyre = "0.6.2"
webbrowser = "0.8.12"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-recursion = "1.0.5"
textwrap = "0.16.1"

[lib]
name = "tooey"
path = "src/lib.rs"
